competitions-table building started

--- a/views/competition-awards.ejs
+++ b/views/competition-awards.ejs
@@ -71,7 +71,7 @@
               </div>
               <i class="fas fa-trophy fa-7x my-4 mx-auto"></i>
               <div class="card-body">
-                <h1 class="">ALLAN SALLA</h1>
+                <h1 id="compBestMan" class=""></h1>
               </div>
             </div>
           </div>
@@ -82,7 +82,7 @@
               </div>
               <i class="fas fa-trophy fa-7x my-4 mx-auto"></i>
               <div class="card-body">
-                <h1 class="">ELLE ÕUN</h1>
+                <h1 id="compBestWoman" class=""></h1>
               </div>
             </div>
           </div>
