--- a/views/competition-table.ejs
+++ b/views/competition-table.ejs
@@ -13,9 +13,9 @@
       %>
     </header>
 
-    <main role="main" class="flex-shrink-0">
-      <div class="container py-4">
-        <div>
+    <main role="main" class="flex-shrink-0 mt-3 mb-5">
+      <div class="container-fluid">
+        <div class="mb-3 mt-5">
           <h5 class="text-uppercase fw-bold text-center">
             <span id="competitionName"></span>
           </h5>
@@ -56,9 +56,10 @@
             <tbody>
               <tr>
                 <td class="text-end">1</td>
-                <td class="border-secondary border-bottom text-center fw-bold">
-                  Mängija 1
-                </td>
+                <td
+                  id="g101Player1"
+                  class="border-secondary border-bottom text-center fw-bold"
+                ></td>
                 <td></td>
                 <td></td>
                 <td></td>
@@ -75,9 +76,10 @@
                 <td class="border-secondary border-top border-end text-end">
                   101
                 </td>
-                <td class="border-secondary border-bottom text-center fw-bold">
-                  Mängija 1
-                </td>
+                <td
+                  id="g101Winner"
+                  class="border-secondary border-bottom text-center fw-bold"
+                ></td>
                 <td class="border-secondary border-bottom"></td>
                 <td></td>
                 <td></td>
@@ -88,11 +90,12 @@
               </tr>
               <tr>
                 <td class="text-end">16</td>
-                <td class="border-secondary border-bottom text-center fw-bold">
-                  Mängija 16
-                </td>
+                <td
+                  id="g101Player2"
+                  class="border-secondary border-bottom text-center fw-bold"
+                ></td>
                 <td class="border-secondary border-bottom border-end"></td>
-                <td class="text-center fw-bold">3:0</td>
+                <td id="g101Score" class="text-center fw-bold"></td>
                 <td class="border-secondary border-end"></td>
                 <td></td>
                 <td></td>
@@ -107,9 +110,10 @@
                 <td></td>
                 <td></td>
                 <td class="border-secondary border-end text-end">109</td>
-                <td class="border-secondary border-bottom text-center fw-bold">
-                  Mängija 1
-                </td>
+                <td
+                  id="g117Player1"
+                  class="border-secondary border-bottom text-center fw-bold"
+                ></td>
                 <td class="border-secondary border-bottom"></td>
                 <td></td>
                 <td></td>
@@ -118,9 +122,10 @@
               </tr>
               <tr>
                 <td class="text-end">9</td>
-                <td class="border-secondary border-bottom text-center fw-bold">
-                  Mängija 9
-                </td>
+                <td
+                  id="g102Player1"
+                  class="border-secondary border-bottom text-center fw-bold"
+                ></td>
                 <td class="border-secondary border-bottom"></td>
                 <td></td>
                 <td class="border-secondary border-end"></td>
@@ -135,9 +140,10 @@
                 <td></td>
                 <td></td>
                 <td class="border-secondary border-end text-end">102</td>
-                <td class="border-secondary border-bottom text-center fw-bold">
-                  Mängija 8
-                </td>
+                <td
+                  id="g102Winner"
+                  class="border-secondary border-bottom text-center fw-bold"
+                ></td>
                 <td class="border-secondary border-bottom border-end"></td>
                 <td></td>
                 <td class="border-secondary border-end"></td>
@@ -148,11 +154,12 @@
               </tr>
               <tr>
                 <td class="text-end">8</td>
-                <td class="border-secondary border-bottom text-center fw-bold">
-                  Mängija 8
-                </td>
+                <td
+                  id="g102Player2"
+                  class="border-secondary border-bottom text-center fw-bold"
+                ></td>
                 <td class="border-secondary border-bottom border-end"></td>
-                <td class="border-secondary text-center fw-bold">3:0</td>
+                <td id="g102Score" class="text-center fw-bold"></td>
                 <td></td>
                 <td></td>
                 <td class="border-secondary border-end"></td>
@@ -169,18 +176,20 @@
                 <td></td>
                 <td></td>
                 <td class="border-secondary border-end text-end">117</td>
-                <td class="border-secondary border-bottom text-center fw-bold">
-                  Mängija 1
-                </td>
+                <td
+                  id="g131Player1"
+                  class="border-secondary border-bottom text-center fw-bold"
+                ></td>
                 <td class="border-secondary border-bottom"></td>
                 <td></td>
                 <td></td>
               </tr>
               <tr>
                 <td class="text-end">5</td>
-                <td class="border-secondary border-bottom text-center fw-bold">
-                  Mängija 5
-                </td>
+                <td
+                  id="g103Player1"
+                  class="border-secondary border-bottom text-center fw-bold"
+                ></td>
                 <td class="border-secondary border-bottom"></td>
                 <td></td>
                 <td></td>
@@ -197,9 +206,10 @@
                 <td></td>
                 <td></td>
                 <td class="border-secondary border-end text-end">103</td>
-                <td class="border-secondary border-bottom text-center fw-bold">
-                  Mängija 5
-                </td>
+                <td
+                  id="g103Winner"
+                  class="border-secondary border-bottom text-center fw-bold"
+                ></td>
                 <td class="border-secondary border-bottom"></td>
                 <td></td>
                 <td class="border-secondary border-end"></td>
@@ -210,9 +220,10 @@
               </tr>
               <tr>
                 <td class="text-end">12</td>
-                <td class="border-secondary border-bottom text-center fw-bold">
-                  Mängija 12
-                </td>
+                <td
+                  id="g103Player2"
+                  class="border-secondary border-bottom text-center fw-bold"
+                ></td>
                 <td class="border-secondary border-bottom"></td>
                 <td class="border-secondary border-start text-center fw-bold">
                   3:0
@@ -242,9 +253,10 @@
               </tr>
               <tr>
                 <td class="text-end">13</td>
-                <td class="border-secondary border-bottom text-center fw-bold">
-                  Mängija 13
-                </td>
+                <td
+                  id="g104Player1"
+                  class="border-secondary border-bottom text-center fw-bold"
+                ></td>
                 <td class="border-secondary border-bottom"></td>
                 <td></td>
                 <td class="border-secondary border-end"></td>
@@ -259,9 +271,10 @@
                 <td></td>
                 <td></td>
                 <td class="border-secondary border-end text-end">104</td>
-                <td class="border-secondary border-bottom text-center fw-bold">
-                  Mängija 4
-                </td>
+                <td
+                  id="g104Winner"
+                  class="border-secondary border-bottom text-center fw-bold"
+                ></td>
                 <td class="border-secondary border-bottom border-end"></td>
                 <td></td>
                 <td></td>
@@ -272,9 +285,10 @@
               </tr>
               <tr>
                 <td class="text-end">4</td>
-                <td class="border-secondary border-bottom text-center fw-bold">
-                  Mängija 45
-                </td>
+                <td
+                  id="g104Player2"
+                  class="border-secondary border-bottom text-center fw-bold"
+                ></td>
                 <td class="border-secondary border-bottom border-end"></td>
                 <td class="border-secondary text-center fw-bold">3:0</td>
                 <td></td>
@@ -302,9 +316,10 @@
               </tr>
               <tr>
                 <td class="text-end">3</td>
-                <td class="border-secondary border-bottom text-center fw-bold">
-                  Mängija 3
-                </td>
+                <td
+                  id="g105Player1"
+                  class="border-secondary border-bottom text-center fw-bold"
+                ></td>
                 <td></td>
                 <td></td>
                 <td></td>
@@ -333,9 +348,10 @@
               </tr>
               <tr>
                 <td class="text-end">14</td>
-                <td class="border-secondary border-bottom text-center fw-bold">
-                  Mängija 14
-                </td>
+                <td
+                  id="g105Player2"
+                  class="border-secondary border-bottom text-center fw-bold"
+                ></td>
                 <td class="border-secondary border-bottom border-end"></td>
                 <td class="text-center fw-bold">3:0</td>
                 <td class="border-secondary border-end"></td>
@@ -363,9 +379,10 @@
               </tr>
               <tr>
                 <td class="text-end">11</td>
-                <td class="border-secondary border-bottom text-center fw-bold">
-                  Mängija 11
-                </td>
+                <td
+                  id="g106Player1"
+                  class="border-secondary border-bottom text-center fw-bold"
+                ></td>
                 <td class="border-secondary border-bottom"></td>
                 <td></td>
                 <td class="border-secondary border-end"></td>
@@ -380,9 +397,10 @@
                 <td></td>
                 <td></td>
                 <td class="border-secondary border-end text-end">106</td>
-                <td class="border-secondary border-bottom text-center fw-bold">
-                  Mängija 6
-                </td>
+                <td
+                  id="g111Player2"
+                  class="border-secondary border-bottom text-center fw-bold"
+                ></td>
                 <td class="border-secondary border-bottom border-end"></td>
                 <td></td>
                 <td class="border-secondary border-end"></td>
@@ -393,9 +411,10 @@
               </tr>
               <tr>
                 <td class="text-end">6</td>
-                <td class="border-secondary border-bottom text-center fw-bold">
-                  Mängija 6
-                </td>
+                <td
+                  id="g106Player2"
+                  class="border-secondary border-bottom text-center fw-bold"
+                ></td>
                 <td class="border-secondary border-bottom border-end"></td>
                 <td class="border-secondary text-center fw-bold">3:0</td>
                 <td></td>
@@ -414,18 +433,20 @@
                 <td></td>
                 <td></td>
                 <td class="border-secondary border-end text-end">118</td>
-                <td class="border-secondary border-bottom text-center fw-bold">
-                  Mängija 2
-                </td>
+                <td
+                  id="g131Player2"
+                  class="border-secondary border-bottom text-center fw-bold"
+                ></td>
                 <td class="border-secondary border-end border-bottom"></td>
                 <td></td>
                 <td></td>
               </tr>
               <tr>
                 <td class="text-end">7</td>
-                <td class="border-secondary border-bottom text-center fw-bold">
-                  Mängija 7
-                </td>
+                <td
+                  id="g107Player1"
+                  class="border-secondary border-bottom text-center fw-bold"
+                ></td>
                 <td class="border-secondary border-bottom"></td>
                 <td></td>
                 <td></td>
@@ -455,9 +476,10 @@
               </tr>
               <tr>
                 <td class="text-end">10</td>
-                <td class="border-secondary border-bottom text-center fw-bold">
-                  Mängija 10
-                </td>
+                <td
+                  id="g107Player2"
+                  class="border-secondary border-bottom text-center fw-bold"
+                ></td>
                 <td class="border-secondary border-bottom"></td>
                 <td class="border-secondary border-start text-center fw-bold">
                   3:0
@@ -476,9 +498,10 @@
                 <td></td>
                 <td></td>
                 <td class="border-secondary border-end text-end">112</td>
-                <td class="border-secondary border-bottom text-center fw-bold">
-                  Mängija 2
-                </td>
+                <td
+                  id="g118Player2"
+                  class="border-secondary border-bottom text-center fw-bold"
+                ></td>
                 <td class="border-secondary border-bottom border-end"></td>
                 <td></td>
                 <td></td>
@@ -487,9 +510,10 @@
               </tr>
               <tr>
                 <td class="text-end">15</td>
-                <td class="border-secondary border-bottom text-center fw-bold">
-                  Mängija 15
-                </td>
+                <td
+                  id="g108Player1"
+                  class="border-secondary border-bottom text-center fw-bold"
+                ></td>
                 <td class="border-secondary border-bottom"></td>
                 <td></td>
                 <td class="border-secondary border-end"></td>
@@ -504,24 +528,27 @@
                 <td></td>
                 <td></td>
                 <td class="border-secondary border-end text-end">108</td>
-                <td class="border-secondary border-bottom text-center fw-bold">
-                  Mängija 2
-                </td>
+                <td
+                  id="g112Player2"
+                  class="border-secondary border-bottom text-center fw-bold"
+                ></td>
                 <td class="border-secondary border-bottom border-end"></td>
                 <td></td>
                 <td></td>
                 <td></td>
                 <td class="border-secondary text-center fw-bold">-131</td>
-                <td class="border-secondary border-bottom text-center fw-bold">
-                  Mängija 2
-                </td>
+                <td
+                  id="g131Loser"
+                  class="border-secondary border-bottom text-center fw-bold"
+                ></td>
                 <td class="fw-bold">II koht</td>
               </tr>
               <tr>
                 <td class="text-end">2</td>
-                <td class="border-secondary border-bottom text-center fw-bold">
-                  Mängija 2
-                </td>
+                <td
+                  id="g108Player2"
+                  class="border-secondary border-bottom text-center fw-bold"
+                ></td>
                 <td class="border-secondary border-bottom border-end"></td>
                 <td class="border-secondary text-center fw-bold">3:0</td>
                 <td></td>
@@ -559,9 +586,10 @@
               <tr>
                 <td class="text-end">-104</td>
                 <!-- 1 col -->
-                <td class="border-secondary border-bottom text-center fw-bold">
-                  Mängija 13
-                </td>
+                <td
+                  id="g104Loser"
+                  class="border-secondary border-bottom text-center fw-bold"
+                ></td>
                 <!-- 2 col -->
                 <td class="border-secondary border-bottom"></td>
                 <!-- 3 col -->
@@ -621,9 +649,10 @@
               <tr>
                 <td class="text-end">-103</td>
                 <!-- 1 col -->
-                <td class="border-secondary border-bottom text-center fw-bold">
-                  Mängija 12
-                </td>
+                <td
+                  id="g103Loser"
+                  class="border-secondary border-bottom text-center fw-bold"
+                ></td>
                 <!-- 2 col -->
                 <td class="border-secondary border-bottom border-end"></td>
                 <!-- 3 col -->
@@ -685,9 +714,10 @@
               <tr>
                 <td class="text-end">-102</td>
                 <!-- 1 col -->
-                <td class="border-secondary border-bottom text-center fw-bold">
-                  Mängija 9
-                </td>
+                <td
+                  id="g102Loser"
+                  class="border-secondary border-bottom text-center fw-bold"
+                ></td>
                 <!-- 2 col -->
                 <td class="border-secondary border-bottom"></td>
                 <!-- 3 col -->
@@ -747,9 +777,10 @@
               <tr>
                 <td class="text-end">-101</td>
                 <!-- 1 col -->
-                <td class="border-secondary border-bottom text-center fw-bold">
-                  Mängija 16
-                </td>
+                <td
+                  id="g101Loser"
+                  class="border-secondary border-bottom text-center fw-bold"
+                ></td>
                 <!-- 2 col -->
                 <td class="border-secondary border-bottom border-end"></td>
                 <!-- 3 col -->
