--- a/views/index.ejs
+++ b/views/index.ejs
@@ -77,7 +77,8 @@
                   </a>
                 </h5>
                 <p class="card-text">
-                  Ülevaade Raplamaa lauatennise võistluste tulemustest. Info toimunud võistlustest ja nende tulemused
+                  Ülevaade Raplamaa lauatennise võistluste tulemustest. Info
+                  toimunud võistlustest ja nende tulemused
                 </p>
               </div>
             </div>
@@ -102,7 +103,7 @@
               <div class="card-body">
                 <h5 class="card-title">
                   <a
-                    href="/voistlusjuhend"
+                    href="/voistlus/juhend"
                     class="text-underline-hover text-reset text-underline-hove text-uppercase fw-bold stretched-link"
                   >
                     Võistlusjuhend
