--- a/views/competition-register.ejs
+++ b/views/competition-register.ejs
@@ -1,197 +1,277 @@
 <!DOCTYPE html>
 <html class="h-100 wxauktc idc0_332" lang="et">
-
-<head>
-  <%- include('./partials/head'); %>
+  <head>
+    <%- include('./partials/head'); %>
     <script src="/js/axios-v0.26.0.min.js" defer></script>
     <script src="/js/competition-register-script.js" defer></script>
+  </head>
 
-</head>
-
-<body class="d-flex flex-column h-100">
-  <header>
-    <%- include('./partials/header'); %>
-  </header>
-  <main id="main" role="main" class="flex-shrink-0 mt-3">
-    <div class="container-fluid">
-      <div class="mb-3 mt-5">
-        <h5 class="text-uppercase fw-bold text-center">
-          Võistlejate registreerimine
-        </h5>
-        <h5 class="text-uppercase fw-bold text-center"><span id="competitionName"></span></h5>
-      </div>
-      <div class="row">
-        <div class="col">
-          <h4 class="text-center">Lisa mängija ELTL reitingust</h4>
-          <p class="text-center">
-            Nimekirjas kokku
-            <span id="reitingPlayerCount">0</span>
-            inimest
-            <span>seisuga</span>
-            <span id="reitingUpdated">01.01.2022 00:00</span>
-          </p>
-          <h3>
-            <input type="search" placeholder="Otsi tabelist ees- ja/või perekonnanime järgi"
-              class="form-control search-input text-center" id="searchInput" onkeyup="searchTableData()" />
-          </h3>
-          <table class="table table-hover table-bordered me-3" id="reitingsTableFull">
-            <thead class="table-secondary">
-              <tr>
-                <th class="text-center" scope="col" data-bs-toggle="tooltip" data-bs-placement="top"
-                  title="Nr = koht reitingus">
-                  Nr
-                </th>
-                <th class="text-center" scope="col" data-bs-toggle="tooltip" data-bs-placement="top"
-                  title="RP = reitingupunktid">
-                  RP
-                </th>
-                <th class="text-center" scope="col" data-bs-toggle="tooltip" data-bs-placement="top"
-                  title="Eesti Lauatennise Liidu võistleja ID">
-                  ELTLID
-                </th>
-                <th scope="col">Eesnimi</th>
-                <th scope="col">Perekonnanimi</th>
-                <th class="text-center" scope="col">Sünniaeg</th>
-                <th class="text-center" scope="col">Sugu</th>
-              </tr>
-            </thead>
-            <tbody id="reitingsTableBody">
-              <% eltlReiting.forEach((item)=>{%>
+  <body class="d-flex flex-column h-100">
+    <header><%- include('./partials/header'); %></header>
+    <main id="main" role="main" class="flex-shrink-0 mt-3">
+      <div class="container-fluid">
+        <div class="mb-3 mt-5">
+          <h5 class="text-uppercase fw-bold text-center">
+            Võistlejate registreerimine
+          </h5>
+          <h5 class="text-uppercase fw-bold text-center">
+            <span id="competitionName"></span>
+          </h5>
+        </div>
+        <div class="row">
+          <div class="col">
+            <h4 class="text-center">Lisa mängija ELTL reitingust</h4>
+            <p class="text-center">
+              Nimekirjas kokku
+              <span id="reitingPlayerCount">0</span>
+              inimest
+              <span>seisuga</span>
+              <span id="reitingUpdated">01.01.2022 00:00</span>
+            </p>
+            <h3>
+              <input
+                type="search"
+                placeholder="Otsi tabelist ees- ja/või perekonnanime järgi"
+                class="form-control search-input text-center"
+                id="searchInput"
+                onkeyup="searchTableData()"
+              />
+            </h3>
+            <table
+              class="table table-hover table-bordered me-3"
+              id="reitingsTableFull"
+            >
+              <thead class="table-secondary">
+                <tr>
+                  <th
+                    class="text-center"
+                    scope="col"
+                    data-bs-toggle="tooltip"
+                    data-bs-placement="top"
+                    title="Nr = koht reitingus"
+                  >
+                    Nr
+                  </th>
+                  <th
+                    class="text-center"
+                    scope="col"
+                    data-bs-toggle="tooltip"
+                    data-bs-placement="top"
+                    title="RP = reitingupunktid"
+                  >
+                    RP
+                  </th>
+                  <th
+                    class="text-center"
+                    scope="col"
+                    data-bs-toggle="tooltip"
+                    data-bs-placement="top"
+                    title="Eesti Lauatennise Liidu võistleja ID"
+                  >
+                    ELTLID
+                  </th>
+                  <th scope="col">Eesnimi</th>
+                  <th scope="col">Perekonnanimi</th>
+                  <th class="text-center" scope="col">Sünniaeg</th>
+                  <th class="text-center" scope="col">Sugu</th>
+                </tr>
+              </thead>
+              <tbody id="reitingsTableBody">
+                <% eltlReiting.forEach((item)=>{%>
                 <tr id="<%= item.PERSONID %>">
-                  <td class="text-center">
-                    <%= item.RATEORDER %>
-                  </td>
-                  <td class="text-center">
-                    <%= item.RATEPOINTS %>
-                  </td>
-                  <td class="text-center">
-                    <%= item.PERSONID %>
-                  </td>
-                  <td>
-                    <%= item.FIRSTNAME %>
-                  </td>
-                  <td>
-                    <%= item.FAMNAME %>
-                  </td>
-                  <td class="text-center">
-                    <%= item.BIRTHDATE %>
-                  </td>
-                  <td class="text-center">
-                    <%= item.SEX %>
-                  </td>
+                  <td class="text-center"><%= item.RATEORDER %></td>
+                  <td class="text-center"><%= item.RATEPOINTS %></td>
+                  <td class="text-center"><%= item.PERSONID %></td>
+                  <td><%= item.FIRSTNAME %></td>
+                  <td><%= item.FAMNAME %></td>
+                  <td class="text-center"><%= item.BIRTHDATE %></td>
+                  <td class="text-center"><%= item.SEX %></td>
                 </tr>
                 <% }); %>
-            </tbody>
-          </table>
-        </div>
-
-        <div class="col">
-          <h4 class="text-center">Registreeritud mängijad</h4>
-          <div class="text-center">
-            <p>
-              Nimekirjas kokku on
-              <span id="registeredPlayerCount">0</span>
-              mängijat
-            </p>
-            <h3 class="text-center">
-              <button type="button" class="btn btn-outline-secondary" data-bs-toggle="modal" data-bs-target="#addPlayerWithoutReiting">
-                <i class="fas fa-plus"></i>
-                &nbsp;Lisa reitinguta mängija
-              </button>
-            </h3>
+              </tbody>
+            </table>
           </div>
 
-          <!-- addPlayerWithoutReiting Modal -->
-          <div class="modal" id="addPlayerWithoutReiting" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="addPlayerWithoutReiting" aria-hidden="true">
-            <div class="modal-dialog">
-              <div class="modal-content">
-                <div class="modal-header text-center">
-                  <h5 class="modal-title w-100" id="addPlayerWithoutReiting">Lisa reitinguta mängija</h5>
-                  <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Loobu"></button>
-                </div>
-                <div class="modal-body">
+          <div class="col">
+            <h4 class="text-center">Registreeritud mängijad</h4>
+            <div class="text-center">
+              <p>
+                Nimekirjas kokku on
+                <span id="registeredPlayerCount">0</span>
+                mängijat
+              </p>
+              <h3 class="text-center">
+                <button
+                  type="button"
+                  class="btn btn-outline-secondary"
+                  data-bs-toggle="modal"
+                  data-bs-target="#addPlayerWithoutReiting"
+                >
+                  <i class="fas fa-plus"></i>
+                  &nbsp;Lisa reitinguta mängija
+                </button>
+              </h3>
+            </div>
 
-                  <div class="row my-3 mx-3">
-                    <div class="col">
-                      <label class="fw-bold" for="pwrFirstName">Eesnimi</label>
-                      <input type="text" class="form-control" id="pwrFirstName">
+            <!-- addPlayerWithoutReiting Modal -->
+            <div
+              class="modal"
+              id="addPlayerWithoutReiting"
+              data-bs-backdrop="static"
+              data-bs-keyboard="false"
+              tabindex="-1"
+              aria-labelledby="addPlayerWithoutReiting"
+              aria-hidden="true"
+            >
+              <div class="modal-dialog">
+                <div class="modal-content">
+                  <div class="modal-header text-center">
+                    <h5 class="modal-title w-100" id="addPlayerWithoutReiting">
+                      Lisa reitinguta mängija
+                    </h5>
+                    <button
+                      type="button"
+                      class="btn-close"
+                      data-bs-dismiss="modal"
+                      aria-label="Loobu"
+                    ></button>
+                  </div>
+                  <div class="modal-body">
+                    <div class="row my-3 mx-3">
+                      <div class="col">
+                        <label class="fw-bold" for="pwrFirstName">
+                          Eesnimi
+                        </label>
+                        <input
+                          type="text"
+                          class="form-control"
+                          id="pwrFirstName"
+                        />
+                      </div>
+                      <div class="col">
+                        <label class="fw-bold" for="pwrLastName">
+                          Perekonnanimi
+                        </label>
+                        <input
+                          type="text"
+                          class="form-control"
+                          id="pwrLastName"
+                        />
+                      </div>
                     </div>
-                    <div class="col">
-                      <label class="fw-bold" for="pwrLastName">Perekonnanimi</label>
-                      <input type="text" class="form-control" id="pwrLastName">
+
+                    <div class="row mt-3 mb-5 mx-3">
+                      <div class="col">
+                        <label class="fw-bold" for="pwrBirthdate">
+                          Sünniaeg
+                        </label>
+                        <input
+                          type="date"
+                          class="form-control"
+                          id="pwrBirthdate"
+                        />
+                      </div>
+                      <div class="col">
+                        <label class="fw-bold" for="pwrSex">Sugu</label>
+                        <select class="form-select" id="pwrSex">
+                          <option selected>Vali sugu</option>
+                          <option value="M">Mees</option>
+                          <option value="N">Naine</option>
+                        </select>
+                      </div>
                     </div>
                   </div>
-
-                  <div class="row mt-3 mb-5 mx-3">
-                    <div class="col">
-                      <label class="fw-bold" for="pwrBirthdate">Sünniaeg</label>
-                      <input type="date" class="form-control" id="pwrBirthdate">
+                  <div class="modal-footer text-center">
+                    <div class="w-100">
+                      <!-- <button type="button" class="btn btn-secondary me-3" data-bs-dismiss="modal">Loobu</button> -->
+                      <button
+                        type="button"
+                        class="btn btn-secondary"
+                        data-bs-dismiss="modal"
+                        onclick="addPlayerWithoutReiting2Table()"
+                      >
+                        Salvesta
+                      </button>
                     </div>
-                    <div class="col">
-                      <label class="fw-bold" for="pwrSex">Sugu</label>
-                      <select class="form-select" id="pwrSex">
-                        <option selected>Vali sugu</option>
-                        <option value="M">Mees</option>
-                        <option value="N">Naine</option>
-                      </select>
-                    </div>
-                  </div>
-
-                </div>
-                <div class="modal-footer text-center">
-                  <div class="w-100">
-                    <!-- <button type="button" class="btn btn-secondary me-3" data-bs-dismiss="modal">Loobu</button> -->
-                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal" onclick="addPlayerWithoutReiting2Table()">Salvesta</button>
                   </div>
                 </div>
               </div>
             </div>
-          </div>
 
-          <table class="table table-hover table-bordered me-3" id="registerTableFull">
-            <thead class="table-secondary">
-              <tr>
-                <th class="text-center" scope="col" data-bs-toggle="tooltip" data-bs-placement="top"
-                  title="Järjekorra number">
-                  Jrk
-                </th>
-                <th class="text-center" scope="col" data-bs-toggle="tooltip" data-bs-placement="top"
-                  title="Nr = koht reitingus">
-                  Nr
-                </th>
-                <th class="text-center" scope="col" data-bs-toggle="tooltip" data-bs-placement="top"
-                  title="RP = reitingupunktid">
-                  RP
-                </th>
-                <th class="text-center" scope="col" data-bs-toggle="tooltip" data-bs-placement="top"
-                  title="Eesti Lauatennise Liidu võistleja ID">
-                  ELTLID
-                </th>
-                <th scope="col">Eesnimi</th>
-                <th scope="col">Perekonnanimi</th>
-                <th class="text-center" scope="col">Sünniaeg</th>
-                <th class="text-center" scope="col">Sugu</th>
-                <th class="text-center" scope="col" data-bs-toggle="tooltip" data-bs-placement="top" title="Toimingud">#</th>
-              </tr>
-            </thead>
-            <tbody id="registerTableBody"></tbody>
-          </table>
-          <div class="my-4 text-center">
-            <span id="message" class="my-0"></span>
-            <button class="btn btn-secondary" onclick="registerPlayers()">
-              Sisesta registreeritud mängijad võistlustabelisse
-            </button>
+            <table
+              class="table table-hover table-bordered me-3"
+              id="registerTableFull"
+            >
+              <thead class="table-secondary">
+                <tr>
+                  <th
+                    class="text-center"
+                    scope="col"
+                    data-bs-toggle="tooltip"
+                    data-bs-placement="top"
+                    title="Järjekorra number"
+                  >
+                    Jrk
+                  </th>
+                  <th
+                    class="text-center"
+                    scope="col"
+                    data-bs-toggle="tooltip"
+                    data-bs-placement="top"
+                    title="Nr = koht reitingus"
+                  >
+                    Nr
+                  </th>
+                  <th
+                    class="text-center"
+                    scope="col"
+                    data-bs-toggle="tooltip"
+                    data-bs-placement="top"
+                    title="RP = reitingupunktid"
+                  >
+                    RP
+                  </th>
+                  <th
+                    class="text-center"
+                    scope="col"
+                    data-bs-toggle="tooltip"
+                    data-bs-placement="top"
+                    title="Eesti Lauatennise Liidu võistleja ID"
+                  >
+                    ELTLID
+                  </th>
+                  <th scope="col">Eesnimi</th>
+                  <th scope="col">Perekonnanimi</th>
+                  <th class="text-center" scope="col">Sünniaeg</th>
+                  <th class="text-center" scope="col">Sugu</th>
+                  <th
+                    class="text-center"
+                    scope="col"
+                    data-bs-toggle="tooltip"
+                    data-bs-placement="top"
+                    title="Toimingud"
+                  >
+                    #
+                  </th>
+                </tr>
+              </thead>
+              <tbody id="registerTableBody"></tbody>
+            </table>
+            <div class="my-4 text-center">
+              <span id="message" class="my-0"></span>
+              <button class="btn btn-secondary" onclick="registerPlayers()">
+                Sisesta registreeritud mängijad võistlustabelisse
+              </button>
+            </div>
           </div>
         </div>
       </div>
-    </div>
-  </main>
-  <footer class="footer mt-auto py-3 bg-light border-top">
-    <%- include('./partials/footer'); %>
-  </footer>
-</body>
-<script>
-  const eltlReitingObj = <%- JSON.stringify(eltlReiting) %>;
-</script>
-
+    </main>
+    <footer class="footer mt-auto py-3 bg-light border-top">
+      <%- include('./partials/footer'); %>
+    </footer>
+  </body>
+  <script>
+    const eltlReitingObj = <%- JSON.stringify(eltlReiting) %>;
+  </script>
 </html>
