awards page fixes

--- a/views/competition-awards.ejs
+++ b/views/competition-awards.ejs
@@ -98,20 +98,7 @@
               <i class="fas fa-medal fa-3x mt-3 mx-auto"></i>
               <div class="card-body mx-auto w-50">
                 <table class="table table-borderless table-sm">
-                  <tbody>
-                    <tr>
-                      <th scope="row">1.</th>
-                      <td>Oliver</td>
-                    </tr>
-                    <tr>
-                      <th scope="row">2.</th>
-                      <td>Bradlee Knights</td>
-                    </tr>
-                    <tr>
-                      <th scope="row">3.</th>
-                      <td>Akshay Rennie</td>
-                    </tr>
-                  </tbody>
+                  <tbody id="boysBetween0and10"></tbody>
                 </table>
               </div>
             </div>
@@ -124,20 +111,7 @@
               <i class="fas fa-medal fa-3x mt-3 mx-auto"></i>
               <div class="card-body mx-auto w-50">
                 <table class="table table-borderless table-sm">
-                  <tbody>
-                    <tr>
-                      <th scope="row">1.</th>
-                      <td>Abbie Stewart</td>
-                    </tr>
-                    <tr>
-                      <th scope="row">2.</th>
-                      <td>Madeleine Massey</td>
-                    </tr>
-                    <tr>
-                      <th scope="row">3.</th>
-                      <td>Regina Robinson</td>
-                    </tr>
-                  </tbody>
+                  <tbody id="girlsBetween0and10"></tbody>
                 </table>
               </div>
             </div>
