Awards page finished

--- a/views/competition-table.ejs
+++ b/views/competition-table.ejs
@@ -15,7 +15,7 @@
 
     <main role="main" class="flex-shrink-0 mt-3 mb-5">
       <div class="container-fluid">
-        <div class="mb-3 mt-5">
+        <div class="py-3">
           <h5 class="text-uppercase fw-bold text-center">
             <span id="competitionName"></span>
           </h5>
