--- a/views/competition-awards.ejs
+++ b/views/competition-awards.ejs
@@ -128,20 +128,7 @@
               <i class="fas fa-medal fa-3x mt-3 mx-auto"></i>
               <div class="card-body mx-auto w-50">
                 <table class="table table-borderless table-sm">
-                  <tbody>
-                    <tr>
-                      <th scope="row">1.</th>
-                      <td>Alexander Frost</td>
-                    </tr>
-                    <tr>
-                      <th scope="row">2.</th>
-                      <td>Bradlee Knights</td>
-                    </tr>
-                    <tr>
-                      <th scope="row">3.</th>
-                      <td>Akshay Rennie</td>
-                    </tr>
-                  </tbody>
+                  <tbody id="boysBetween11and14"></tbody>
                 </table>
               </div>
             </div>
@@ -154,20 +141,7 @@
               <i class="fas fa-medal fa-3x mt-3 mx-auto"></i>
               <div class="card-body mx-auto w-50">
                 <table class="table table-borderless table-sm">
-                  <tbody>
-                    <tr>
-                      <th scope="row">1.</th>
-                      <td>Abbie Stewart</td>
-                    </tr>
-                    <tr>
-                      <th scope="row">2.</th>
-                      <td>Madeleine Massey</td>
-                    </tr>
-                    <tr>
-                      <th scope="row">3.</th>
-                      <td>Regina Robinson</td>
-                    </tr>
-                  </tbody>
+                  <tbody id="girlsBetween11and14"></tbody>
                 </table>
               </div>
             </div>
@@ -184,20 +158,7 @@
               <i class="fas fa-medal fa-3x mt-3 mx-auto"></i>
               <div class="card-body mx-auto w-50">
                 <table class="table table-borderless table-sm">
-                  <tbody>
-                    <tr>
-                      <th scope="row">1.</th>
-                      <td>Alexander Frost</td>
-                    </tr>
-                    <tr>
-                      <th scope="row">2.</th>
-                      <td>Bradlee Knights</td>
-                    </tr>
-                    <tr>
-                      <th scope="row">3.</th>
-                      <td>Akshay Rennie</td>
-                    </tr>
-                  </tbody>
+                  <tbody id="boysBetween15and18"></tbody>
                 </table>
               </div>
             </div>
@@ -210,20 +171,7 @@
               <i class="fas fa-medal fa-3x mt-3 mx-auto"></i>
               <div class="card-body mx-auto w-50">
                 <table class="table table-borderless table-sm">
-                  <tbody>
-                    <tr>
-                      <th scope="row">1.</th>
-                      <td>Abbie Stewart</td>
-                    </tr>
-                    <tr>
-                      <th scope="row">2.</th>
-                      <td>Madeleine Massey</td>
-                    </tr>
-                    <tr>
-                      <th scope="row">3.</th>
-                      <td>Regina Robinson</td>
-                    </tr>
-                  </tbody>
+                  <tbody id="girlsBetween15and18"></tbody>
                 </table>
               </div>
             </div>
@@ -240,20 +188,7 @@
               <i class="fas fa-medal fa-3x mt-3 mx-auto"></i>
               <div class="card-body mx-auto w-50">
                 <table class="table table-borderless table-sm">
-                  <tbody>
-                    <tr>
-                      <th scope="row">1.</th>
-                      <td>Alexander Frost</td>
-                    </tr>
-                    <tr>
-                      <th scope="row">2.</th>
-                      <td>Bradlee Knights</td>
-                    </tr>
-                    <tr>
-                      <th scope="row">3.</th>
-                      <td>Akshay Rennie</td>
-                    </tr>
-                  </tbody>
+                  <tbody id="menBetween19and34"></tbody>
                 </table>
               </div>
             </div>
@@ -266,20 +201,7 @@
               <i class="fas fa-medal fa-3x mt-3 mx-auto"></i>
               <div class="card-body mx-auto w-50">
                 <table class="table table-borderless table-sm">
-                  <tbody>
-                    <tr>
-                      <th scope="row">1.</th>
-                      <td>Abbie Stewart</td>
-                    </tr>
-                    <tr>
-                      <th scope="row">2.</th>
-                      <td>Madeleine Massey</td>
-                    </tr>
-                    <tr>
-                      <th scope="row">3.</th>
-                      <td>Regina Robinson</td>
-                    </tr>
-                  </tbody>
+                  <tbody id="womenBetween19and34"></tbody>
                 </table>
               </div>
             </div>
@@ -296,20 +218,7 @@
               <i class="fas fa-medal fa-3x mt-3 mx-auto"></i>
               <div class="card-body mx-auto w-50">
                 <table class="table table-borderless table-sm">
-                  <tbody>
-                    <tr>
-                      <th scope="row">1.</th>
-                      <td>Alexander Frost</td>
-                    </tr>
-                    <tr>
-                      <th scope="row">2.</th>
-                      <td>Bradlee Knights</td>
-                    </tr>
-                    <tr>
-                      <th scope="row">3.</th>
-                      <td>Akshay Rennie</td>
-                    </tr>
-                  </tbody>
+                  <tbody id="menBetween35and49"></tbody>
                 </table>
               </div>
             </div>
@@ -322,20 +231,7 @@
               <i class="fas fa-medal fa-3x mt-3 mx-auto"></i>
               <div class="card-body mx-auto w-50">
                 <table class="table table-borderless table-sm">
-                  <tbody>
-                    <tr>
-                      <th scope="row">1.</th>
-                      <td>Abbie Stewart</td>
-                    </tr>
-                    <tr>
-                      <th scope="row">2.</th>
-                      <td>Madeleine Massey</td>
-                    </tr>
-                    <tr>
-                      <th scope="row">3.</th>
-                      <td>Regina Robinson</td>
-                    </tr>
-                  </tbody>
+                  <tbody id="womenBetween35and44"></tbody>
                 </table>
               </div>
             </div>
@@ -352,20 +248,7 @@
               <i class="fas fa-medal fa-3x mt-3 mx-auto"></i>
               <div class="card-body mx-auto w-50">
                 <table class="table table-borderless table-sm">
-                  <tbody>
-                    <tr>
-                      <th scope="row">1.</th>
-                      <td>Alexander Frost</td>
-                    </tr>
-                    <tr>
-                      <th scope="row">2.</th>
-                      <td>Bradlee Knights</td>
-                    </tr>
-                    <tr>
-                      <th scope="row">3.</th>
-                      <td>Akshay Rennie</td>
-                    </tr>
-                  </tbody>
+                  <tbody id="menBetween50and59"></tbody>
                 </table>
               </div>
             </div>
@@ -378,20 +261,7 @@
               <i class="fas fa-medal fa-3x mt-3 mx-auto"></i>
               <div class="card-body mx-auto w-50">
                 <table class="table table-borderless table-sm">
-                  <tbody>
-                    <tr>
-                      <th scope="row">1.</th>
-                      <td>Abbie Stewart</td>
-                    </tr>
-                    <tr>
-                      <th scope="row">2.</th>
-                      <td>Madeleine Massey</td>
-                    </tr>
-                    <tr>
-                      <th scope="row">3.</th>
-                      <td>Regina Robinson</td>
-                    </tr>
-                  </tbody>
+                  <tbody id="womenBetween45and54"></tbody>
                 </table>
               </div>
             </div>
@@ -408,20 +278,7 @@
               <i class="fas fa-medal fa-3x mt-3 mx-auto"></i>
               <div class="card-body mx-auto w-50">
                 <table class="table table-borderless table-sm">
-                  <tbody>
-                    <tr>
-                      <th scope="row">1.</th>
-                      <td>Alexander Frost</td>
-                    </tr>
-                    <tr>
-                      <th scope="row">2.</th>
-                      <td>Bradlee Knights</td>
-                    </tr>
-                    <tr>
-                      <th scope="row">3.</th>
-                      <td>Akshay Rennie</td>
-                    </tr>
-                  </tbody>
+                  <tbody id="menBetween60and69"></tbody>
                 </table>
               </div>
             </div>
@@ -434,20 +291,7 @@
               <i class="fas fa-medal fa-3x mt-3 mx-auto"></i>
               <div class="card-body mx-auto w-50">
                 <table class="table table-borderless table-sm">
-                  <tbody>
-                    <tr>
-                      <th scope="row">1.</th>
-                      <td>Abbie Stewart</td>
-                    </tr>
-                    <tr>
-                      <th scope="row">2.</th>
-                      <td>Madeleine Massey</td>
-                    </tr>
-                    <tr>
-                      <th scope="row">3.</th>
-                      <td>Regina Robinson</td>
-                    </tr>
-                  </tbody>
+                  <tbody id="womenBetween55and64"></tbody>
                 </table>
               </div>
             </div>
@@ -464,20 +308,7 @@
               <i class="fas fa-medal fa-3x mt-3 mx-auto"></i>
               <div class="card-body mx-auto w-50">
                 <table class="table table-borderless table-sm">
-                  <tbody>
-                    <tr>
-                      <th scope="row">1.</th>
-                      <td>Alexander Frost</td>
-                    </tr>
-                    <tr>
-                      <th scope="row">2.</th>
-                      <td>Bradlee Knights</td>
-                    </tr>
-                    <tr>
-                      <th scope="row">3.</th>
-                      <td>Akshay Rennie</td>
-                    </tr>
-                  </tbody>
+                  <tbody id="menBetween70andOlder"></tbody>
                 </table>
               </div>
             </div>
@@ -490,20 +321,7 @@
               <i class="fas fa-medal fa-3x mt-3 mx-auto"></i>
               <div class="card-body mx-auto w-50">
                 <table class="table table-borderless table-sm">
-                  <tbody>
-                    <tr>
-                      <th scope="row">1.</th>
-                      <td>Abbie Stewart</td>
-                    </tr>
-                    <tr>
-                      <th scope="row">2.</th>
-                      <td>Madeleine Massey</td>
-                    </tr>
-                    <tr>
-                      <th scope="row">3.</th>
-                      <td>Regina Robinson</td>
-                    </tr>
-                  </tbody>
+                  <tbody id="womenBetween65andOlder"></tbody>
                 </table>
               </div>
             </div>
