Filler -bye bye- player functionality added, automatic use when there are less then 16 players

--- a/views/competition.ejs
+++ b/views/competition.ejs
@@ -23,7 +23,7 @@
             <tr>
               <th class="text-center">Kuupäev</th>
               <th>Võistluse nimetus</th>
-              <th>Tulemused</th>
+              <th class="text-center">Tulemused</th>
             </tr>
           </thead>
 
