--- a/views/competition-list.ejs
+++ b/views/competition-list.ejs
@@ -3,7 +3,7 @@
   <head>
     <%- include('./partials/head'); %>
     <script src="/js/moment-v2.29.1.js" defer></script>
-    <script src="/js/competition-script.js" defer></script>
+    <script src="/js/competition-list-script.js" defer></script>
   </head>
 
   <body class="d-flex flex-column h-100">
