--- a/views/schedule-add.ejs
+++ b/views/schedule-add.ejs
@@ -47,9 +47,7 @@
           </div>
 
           <div class="mb-3">
-            <label class="fw-bold" for="scheduleLocation">
-              Võistluskoht
-            </label>
+            <label class="fw-bold" for="scheduleLocation">Võistluskoht</label>
             <input type="text" class="form-control" id="scheduleLocation" />
           </div>
 
@@ -72,14 +70,8 @@
 
           <div class="row mb-3">
             <div class="col">
-              <label class="fw-bold" for="scheduleOrganizer">
-                Korraldaja
-              </label>
-              <input
-                type="text"
-                class="form-control"
-                id="scheduleOrganizer"
-              />
+              <label class="fw-bold" for="scheduleOrganizer">Korraldaja</label>
+              <input type="text" class="form-control" id="scheduleOrganizer" />
             </div>
             <div class="form-group col-md-6">
               <label class="fw-bold" for="scheduleOrganizerContact">
@@ -95,7 +87,7 @@
 
           <div class="my-4 text-center">
             <span id="message" class="my-0"></span>
-            <a class="btn btn-secondary my-4 me-3" href="/kasutajad/toolaud">
+            <a class="btn btn-secondary my-4 me-3" href="/kohtunik/toolaud">
               Tagasi töölauale
             </a>
             <button
