--- a/views/umpire-dashboard.ejs
+++ b/views/umpire-dashboard.ejs
@@ -10,7 +10,9 @@
     <main class="flex-shrink-0">
       <div class="container">
         <div>
-          <h5 class="text-uppercase fw-bold text-center mb-4">Töölaud</h5>
+          <h5 class="text-uppercase fw-bold text-center mb-4">
+            Kohtuniku töölaud
+          </h5>
         </div>
 
         <div class="row">
@@ -21,7 +23,10 @@
               </div>
               <div class="card-body">
                 <div class="my-3 d-grid gap-3 col-6 mx-auto">
-                  <a class="btn btn-secondary btn-lg" href="/voistlus/lisa">
+                  <a
+                    class="btn btn-secondary btn-lg"
+                    href="/kohtunik/voistlus/lisa"
+                  >
                     Alusta võistlusega
                   </a>
                   <a class="btn btn-secondary btn-lg disabled" href="#">
@@ -39,10 +44,16 @@
               </div>
               <div class="card-body">
                 <div class="my-3 d-grid gap-3 col-6 mx-auto">
-                  <a class="btn btn-secondary btn-lg" href="/ajakava/lisa">
+                  <a
+                    class="btn btn-secondary btn-lg"
+                    href="/kohtunik/ajakava/lisa"
+                  >
                     Lisa võistlus ajakavasse
                   </a>
-                  <a class="btn btn-secondary btn-lg" href="/ajakava/muuda">
+                  <a
+                    class="btn btn-secondary btn-lg"
+                    href="/kohtunik/ajakava/muuda"
+                  >
                     Muuda ajakava
                   </a>
                 </div>
