--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -50,7 +50,7 @@
 
       <a
         class="btn btn-outline-secondary d-lg-inline-block my-2 my-md-0 ms-md-3"
-        href="/kasutajad/toolaud"
+        href="/logisisse"
       >
         Logi sisse
       </a>
