tructure change fixes on test server

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -70,7 +70,7 @@
               <div class="card-body">
                 <h5 class="card-title">
                   <a
-                    href="/voistlus"
+                    href="/voistlus/nimekiri"
                     class="text-underline-hover text-reset text-underline-hove text-uppercase fw-bold stretched-link"
                   >
                     VÕISTLUSED
