--- a/views/update-reiting.ejs
+++ b/views/update-reiting.ejs
@@ -25,7 +25,7 @@
         </div>
         <div class="my-4 text-center">
           <span id="message" class="my-0"></span>
-          <a class="btn btn-secondary my-4 me-3" href="/kasutajad/toolaud">
+          <a class="btn btn-secondary my-4 me-3" href="/kohtunik/toolaud">
             Tagasi töölauale
           </a>
         </div>
